src/main/java/com/example/demo/entity/error/BrandError.java
package com.example.demo.entity.error;

public enum BrandError {
	ID_REQUIRED, BRAND_REQUIRED,BRAND_NOT_EXISTS, BRAND_CONSTRAINT_VIOLATION, BRAND_ALREADY_EXISTS,BRAND_DATA_INTEGRITY_VIOLATION;
}

